Wed Apr  7 21:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* brain.make: Add extension X lib for xgps.

1999-04-01  Adam Fedor  <fedor@gnu.org>

	* configure.in: Handle cross-platform compilation better by
	finding programs with proper prefix for target.
	Look for extra X libs needed by dps.
	* config.make.in (X_PRE_LIBS): Define extra X libs
	* brain.make: Use them.

Wed Mar 31 01:24:50 1999  Masatake Yamato  <masata-y@is.aist-nara.ac.jp>

	* application.make (ALL_GUI_LIBS): Put BACKEND_LIBS after GUI_LIBS.

        This causes a problem when building a static library.

        The patch is provided by Takaaki MORIYAMA <taka@airlab.cs.ritsumei.ac.jp>.
        
1999-03-17  Adam Fedor  <fedor@gnu.org>

	* Fix include/includes problem. Use autoconf 2.13

1999-03-14  Adam Fedor  <fedor@gnu.org>

	* configure.in: Add check for cygwin32

1999-03-12  Adam Fedor  <fedor@gnu.org>

	* target.make: Turn off shared libs for FreeBSD 2.x

Wed Mar 10 15:23:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* configure.in: Fix configure to set up installation directory
	correctly when the user doesn't specify the system root directory.

1999-03-08  Adam Fedor  <fedor@gnu.org>

	* Merge dawn branch into main.

Tue Mar  2 08:57:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * make/target.make: Include GNUSTEP_SYSTEM_LIBRARIES in link list to
          fix shared-lib linking error on linux elf.

Tue Mar  2 08:04:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Merge in 'dawn' CVS branch.

1999-02-22  Scott Christley  <scottc@golden.net-community.com>

	* opentool: New file.

1999-02-19  Scott Christley  <scottc@golden.net-community.com>

	* MediaBook.sh (MB_GNUSTEP_SOURCE, MB_FINANCE_SOURCE): New variables.
	(MB.init): Renamed to MBinit.sh and put under GNUSTEP_USER_ROOT.
	* setlocaltz.sh: New file.
	* MediaBook.func: Add help for new commands.

1999-03-08  Adam Fedor  <fedor@gnu.org>

	* Version 0.5.5 Released.
